--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,7 @@ jobs:
       - name: Clone down repository
         uses: actions/checkout@v4       
       - run: ci/build-app.sh
+      
       - name: Test       
+        uses: actions/checkout@v4   
       - run: ci/unit-test-app.sh
