--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ jobs:
     steps:
       - name: Clone down repository
         uses: actions/checkout@v4       
-      - run: ci/build-app.sh
+      - name: Build app
+        run: ci/build-app.sh
       
       - name: Test       
-      - run: ci/unit-test-app.sh
+        run: ci/unit-test-app.sh
