--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on: push
 env: # Set the secret as an input
   docker_username: ${{ github.actor }} 
   docker_password: ${{ secrets.GITHUB_TOKEN }} #Nees to be set to be made available to the workflow
+  GIT_COMMIT: ${{ github.sha }}
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -10,34 +11,43 @@ jobs:
     steps:
       - name: Clone down repository
         uses: actions/checkout@v4       
-      - name: Build app
+      - name: Build application
         run: ci/build-app.sh
-      
-      - name: Test       
+      - name: Test
         run: ci/unit-test-app.sh
-  Docker-image:
+      - name: Upload repo
+        uses: actions/upload-artifact@v4
+        with: 
+          name: code
+          path: .
+  Linting:
     runs-on: ubuntu-latest
     needs: [Build]
-    permissions:
-      packages: write
-
-      
     steps:
       - name: Download code
-        uses: actions/checkout@v4
+        uses: actions/download-artifact@v4
         with:
           name: code
           path: .
-      - name: Run linting
+      - name: run linting
         uses: super-linter/super-linter/slim@v5 
         env:
           DEFAULT_BRANCH: main
           # To report GitHub Actions status checks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DISABLE_ERRORS: true 
-          GIT_COMMIT: ${{github.sha}}
-
-      - name: build docker
-        run: bash ci/build-docker.sh
-      - name: push docker
-        run: bash ci/push-docker.sh
+          DISABLE_ERRORS: true      
+  Docker-image:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    permissions:
+      packages: write
+    steps:
+    - name: Download code
+      uses: actions/download-artifact@v4
+      with:
+        name: code
+        path: .
+    - name: build docker
+      run: bash ci/build-docker.sh
+    - name: push docker
+      run: bash ci/push-docker.sh
